2013-08-08 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: added some STM8 tools info, various fixes

2013-08-07 Borut Razem <borut.razem AT gmail.com>

	* doc/sdccman.lyx: updated Sourceforge URLs

2013-08-05 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* src/SDCCast.c (decorateType): fixed bug 2201 (spurious limited
	  range warning)

2013-08-04 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peeph.def:
	  Peepholes for in-place operations.
	* src/stm8/gen.c:
	  More efficient pointer write, fix handling of a in comparison for equality.

2013-08-03 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/peep.c,
	  src/stm8/peeph.def:
	  Infrastructure for notUsed().
	* src/stm8/gen.c:
	  More efficient stack-to-stack copy.

2013-08-02 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c:
	  More efficient pcall.

2013-08-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCClospre.hpp,
	  src/SDCCopt.c:
	  Fix handling of isaddr flag in optimizations.

2013-08-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/SDCCopt.c,
	  src/SDCCicode.c,
	  src/stm8/gen.c,
	  src/z80/gen.c:
	  Fold offset into ADDRESS_OF, RFE #393.

2013-08-02 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  More efficient zeroing of bytes, more efficient addition of constants, fix handling of a in pointer set.
	* src/SDCCpeeph.c:
	  Fix handling of architectures that have absolute jump instructions of different length.
	* src/stm8/peeph.def:
	  More jump-to-jump optimizations.

2013-08-02 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* support/scripts/sdcc.nsi: install/uninstall stm8 related files

2013-08-01 Philipp Klaus Krause <philipp AT informatik.uni-frankfurt.de>

	* src/stm8/gen.c:
	  Smaller code for GET_VALUE_AT_ADDRESS and signed casts.

2013-07-30 Philipp Klaus Krause <pkk AT spth.de>

	* src/stm8/gen.c: